--- a/common.css
+++ b/common.css
@@ -274,6 +274,15 @@ ul li a{
 ----------------------------------------*/
 
   
-  
+   footer {
+    width: 100%;
+    height: 120px; 
+    text-align: center;
+    padding: 50px 0;
+    background-color: black;
+  }
+  .footer{
+    color: white;
+  }
   
   
