--- a/foodarticle.css
+++ b/foodarticle.css
@@ -82,7 +82,7 @@ h1{
     width: 80%; 
 }
 .content__information {
-    width: 350px;
+    width: 80%;
     display: flex;
     flex-direction: row;
     margin-top: 20px;
@@ -99,8 +99,12 @@ h1{
     margin-left: 20px;
 }
 
+.images{
+    margin-top: auto;
+    margin-bottom: auto;
+}
 .icon{
-    padding: 10px;
+    padding: 12px;
     display: flex;
     flex-direction: row;
 }
