--- a/tokusyu.css
+++ b/tokusyu.css
@@ -101,7 +101,7 @@ p{
     margin-left: auto;
 	  margin-right: auto;
     margin: 20px;
-   
+   border-radius: 8px;
     background: #fff;
     box-shadow: 0 0 6px rgba(0,0,0,.1);
    padding: 20px;
