--- a/sneaker.css
+++ b/sneaker.css
@@ -22,10 +22,17 @@ h1 {
     animation-name: slideIn;
     animation-duration: 3s;
 
-
-
 }
 
+.title2 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
+    font-size: 35px;
+    animation-name: slideIn;
+    animation-duration: 3s;
+
+}
 
 
 .text {
@@ -120,4 +127,32 @@ h1 {
   }
   .fadein.active{
     opacity: 1;
+  }
+
+  .fadein-left{
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
+    -webkit-transform: translateX(-20px);
+    -moz-transform: translateX(-20px);
+    -ms-transform: translateX(-20px);
+    transform: translateX(-20px);
+    opacity: 0;
+    padding-top: 40px;
+    text-align: center;
+    font-size: 35px;
+    padding-bottom: 40px;
+
+  }
+  .fadein-left.active{
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .memo{
+      font-size: 10px;
+      padding: 20px;
   }
